# cyberguardian-agent

./: .gitignore
amsi-provider/: Cargo.toml
amsi-provider/src/: lib.rs
core-agent/: Cargo.toml  ml_scanner.py
core-agent/src/: backend_client.rs  config.rs  main.rs  ml_integration.rs  watcher.rs
tauri-ui/cyberguardian-ui/: .env.production  .gitignore  dashboard-package.json  frontend_files.txt  package-lock.json  package.json  tailwind.config.js  test-sig.txt  vite.config.ts
tauri-ui/cyberguardian-ui/.github/workflows/: release.yml
tauri-ui/cyberguardian-ui/components/: LiveThreatFeed.tsx  ProtectedRoute.tsx
tauri-ui/cyberguardian-ui/components/layout/: ConditionalLayout.tsx  Sidebar.tsx
tauri-ui/cyberguardian-ui/components/threats/: IOCFilters.tsx
tauri-ui/cyberguardian-ui/lib/: api.ts
tauri-ui/cyberguardian-ui/lib/contexts/: AuthContext.tsx
tauri-ui/cyberguardian-ui/src/: App.tsx  globals.css  layout.tsx  main.tsx  page.tsx
tauri-ui/cyberguardian-ui/src-backup/: App.css  App.tsx
tauri-ui/cyberguardian-ui/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
tauri-ui/cyberguardian-ui/src-tauri/capabilities/: default.json
tauri-ui/cyberguardian-ui/src-tauri/src/: api_client.rs  background_tasks.rs  backup_monitor.rs  deep_quarantine.rs  etw_monitor.rs  file_watcher.rs  lib.rs  main.rs  process_monitor.rs  process_protection.rs  registry_scanner.rs  service_scanner.rs  task_scanner.rs  vuln_scanner.rs  windows_service.rs
tauri-ui/cyberguardian-ui/src/admin/: page.tsx
tauri-ui/cyberguardian-ui/src/admin/roles/: page.tsx
tauri-ui/cyberguardian-ui/src/analytics/: page.tsx
tauri-ui/cyberguardian-ui/src/audit/: page.tsx
tauri-ui/cyberguardian-ui/src/backup/: page.tsx
tauri-ui/cyberguardian-ui/src/components/: AutoPurgeSettings.tsx  FileScanner.tsx  HoneypotMap.tsx  LiveThreatFeed.tsx  ProtectedRoute.tsx  RecommendationModal.tsx  ScanProfiles.tsx  SensitivityProfiles.tsx
tauri-ui/cyberguardian-ui/src/configuration/: page.tsx
tauri-ui/cyberguardian-ui/src/contexts/: AuthContext.tsx
tauri-ui/cyberguardian-ui/src/dashboard/: page-original-backup.tsx  page-simple.tsx  page-working.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/deception/: page.tsx
tauri-ui/cyberguardian-ui/src/detection/: page-simple.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/emails/: page.tsx
tauri-ui/cyberguardian-ui/src/executive/: page.tsx
tauri-ui/cyberguardian-ui/src/fp-control/: page.tsx
tauri-ui/cyberguardian-ui/src/honeypots/: page.tsx
tauri-ui/cyberguardian-ui/src/hooks/: useOnlineStatus.ts
tauri-ui/cyberguardian-ui/src/incidents/: page.tsx
tauri-ui/cyberguardian-ui/src/insights/: page.tsx
tauri-ui/cyberguardian-ui/src/lib/: api.ts  types.ts
tauri-ui/cyberguardian-ui/src/ml/: page.tsx
tauri-ui/cyberguardian-ui/src/nis2/: page.tsx
tauri-ui/cyberguardian-ui/src/performance/: page.tsx
tauri-ui/cyberguardian-ui/src/pricing/: page.tsx
tauri-ui/cyberguardian-ui/src/process/: page.tsx
tauri-ui/cyberguardian-ui/src/protection/: page-simple.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/quarantine/: page.tsx
tauri-ui/cyberguardian-ui/src/remediation/: page.tsx
tauri-ui/cyberguardian-ui/src/scans/: page-simple.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/security/: page.tsx
tauri-ui/cyberguardian-ui/src/settings/: page-simple.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/success/: page.tsx
tauri-ui/cyberguardian-ui/src/threats/: page-simple.tsx  page.tsx
tauri-ui/cyberguardian-ui/src/updates/: page.tsx  page.tsx.backup
tauri-ui/cyberguardian-ui/src/vulnerabilities/: page.tsx
(+18 files in other folders)
