[package]
name = "cyberguardian-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "cyberguardian_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-http = "2.5.6"
lazy_static = "1.4"
sha2 = "0.10"

# File System Watcher dependencies
notify = "6.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

# HTTP client for Railway API
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Windows API for process protection
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
