    [package]
    name = "cyberguardian-ui"
    version = "1.10.0"
    description = "A Tauri App"
    authors = ["you"]
    edition = "2021"

    [lib]
    name = "cyberguardian_ui_lib"
    crate-type = ["staticlib", "cdylib", "rlib"]

    [build-dependencies]
    tauri-build = { version = "2", features = [] }

    [dependencies]
    tauri = { version = "2", features = ["tray-icon", "devtools"] }
    tauri-plugin-opener = "2"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    tauri-plugin-shell = "2.3.4"
    tauri-plugin-http = "2.5.6"
    tauri-plugin-updater = "2"
    lazy_static = "1.4"
    sha2 = "0.10"
    # Registry scanning
    winreg = "0.52"
    md5 = "0.7"
    chrono = { version = "0.4", features = ["serde"] }
    dirs = "5.0"

    # File System Watcher dependencies
    notify = "6.1"
    tokio = { version = "1", features = ["full"] }

    # HTTP client for Railway API
    reqwest = { version = "0.11", features = ["blocking", "json"] }

    # Windows API for process protection and service management
    [target.'cfg(windows)'.dependencies]
    windows = { version = "0.58", features = [
        "Win32_Foundation",
        "Win32_UI_Shell",
        "Win32_System_Services",      # ← Service Control Manager (SCM) API
        "Win32_Security",              # ← Security and access control
        "Win32_System_Threading",      # ← Process/Thread management
        "Win32_System_Diagnostics_ToolHelp",
        "Win32_System_ProcessStatus",        # ← ДОБАВИ
        "Win32_System_SystemServices",       # ← ДОБАВИ  
    ] }

    # Windows Service wrapper library
    windows-service = "0.7"
    
